Added maven support for package management in Java and updated README